Ignore twitter links in .lycheeignore

--- a/.lycheeignore
+++ b/.lycheeignore
@@ -12,6 +12,11 @@ https?://www\.encepp\.eu(?:/.*)?$
 https?://www\.tandfonline\.com(?:/.*)?$
 https?://www\.icnarc\.org(?:/.*)?$
 https?://doi\.org(?:/.*)?$
+
+# Twitter used to work but is being very flaky.
+# This exclusion should be reviewed in future to see if the issue persists.
+https?://twitter\.com(?:/.*$)?$
+
 # The following ignore line ignores this link in the source: ../data-sources
 #
 # MkDocs actually uses an index.md file to generate this,
