--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Check links
         uses: lycheeverse/lychee-action@9ace499fe66cee282a29eaa628fdac2c72fa087f  # v1.6.1
         with:
-          args: "--exclude-all-private --exclude-mail --include-verbatim --require-https --verbose --no-progress --timeout 60 './**/*.md' './**/*.html'"
+          args: "--exclude-all-private --exclude-mail --include-verbatim --require-https --verbose --no-progress --timeout 60 './docs/**/*.md' './docs/**/*.html', './imported_docs/**/*.md' './imported_docs/**/*.html'"
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
