--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,11 +68,11 @@ nav:
         - Create a draft: reports/create-a-draft.md
         - Review process: reports/review-process.md
         - Publishing a report: reports/publish-a-report.md
+      - Project completion: publishing-repo.md
       - Adding your pre-print/paper to OpenSAFELY.org: adding-a-paper.md
       - Information for system integrators: system-integration.md
   - OpenSAFELY best practice:
       - Bennett Institute Open Manifesto: open-data-manifesto.md
-      - Publishing your GitHub Repository: publishing-repo.md
       - Developing a protocol: protocol.md
       - Using Git effectively: git-workflow.md
       - Code reviews: code-reviews.md
