Enable emoji support
This will be used in the ehrQL documentation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,6 +176,10 @@ markdown_extensions:
   - footnotes
   - abbr
   - md_in_html
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
 
 hooks:
     - hooks/parent_snippets.py
