Move imported docs path to `/ehrql`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,7 +106,7 @@ edit_uri: "edit/main/docs/"
 extra_css:
   - css/youtube.css
   - css/extra.css
-  - data-builder/stylesheets/extra.css
+  - ehrql/stylesheets/extra.css
 
 extra_javascript:
   - js/extra.js
@@ -123,14 +123,14 @@ extra:
   # see hooks/ehrql_branch.py
   ehrql_branch: !ENV [EHRQL_BRANCH, "main"]
   ehrql_imported_css:
-    - imported_docs/data-builder/stylesheets/extra.css
+    - imported_docs/ehrql/stylesheets/extra.css
 
 copyright: © University of Oxford for the Bennett Institute for Applied Data Science. This work may be copied freely for non-commercial research and study. If you wish to do any of the other acts restricted by the copyright you should apply in writing to bennett@phc.ox.ac.uk.
 
 plugins:
   - search
   - table-reader:
-      data_path: imported_docs/data-builder
+      data_path: imported_docs/ehrql
   - mkdocstrings:
       default_handler: python
       handlers:
@@ -159,7 +159,7 @@ markdown_extensions:
       check_paths: true
       base_path: # base paths will be checked in order for matching snippets
         - .  # dir containing this config file
-        - imported_docs/data-builder # docs folder for the imported repo
+        - imported_docs/ehrql # docs folder for the imported repo
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
