--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,7 @@ theme:
     - content.code.copy
     - navigation.footer
     - navigation.indexes
+    - navigation.expand
 
 edit_uri: "edit/main/docs/"
 
