--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,7 @@ nav:
         - Create a draft: reports/create-a-draft.md
         - Review process: reports/review-process.md
         - Publishing a report: reports/publish-a-report.md
-      - Project completion: publishing-repo.md
+      - Project completion: project-completion.md
       - Adding your pre-print/paper to OpenSAFELY.org: adding-a-paper.md
       - Information for system integrators: system-integration.md
   - OpenSAFELY best practice:
