Refine Vale styles
* For more consistency in their formatting
* For fewer false positives

There might be a better way of picking out URL text, but I'm not sure
about that. The workaround I've used: specifying the domain name in the
branding check seems to work.

--- a/styles/OpenSAFELY/HereLinks.yml
+++ b/styles/OpenSAFELY/HereLinks.yml
@@ -1,7 +1,7 @@
 extends: existence
-message: Consider rewording link text to remove the use of 'here'
 scope: raw
-level: warning
+message: 'Consider rewording link text to remove the use of "here"'
+level: suggestion
 ignorecase: true
 raw:
-  - '\[.*here.*\]'
+  - '(\[|\[.*\s)here(\s.*)?\]'
