--- a/styles/OpenSAFELY/Branding.yml
+++ b/styles/OpenSAFELY/Branding.yml
@@ -1,10 +1,11 @@
 extends: substitution
-message: Consider using '%s' instead of '%s'
+scope: text
+message: "Consider using '%s' instead of '%s'"
 level: suggestion
 ignorecase: true
 # swap maps tokens in form of bad: good
 swap:
   # NOTE: The left-hand (bad) side can match the right-hand (good) side; Vale
   # will ignore any alerts that match the intended form.
-  "github": GitHub
-  "open[ -]?safely": OpenSAFELY
+  'github(?!.com)': 'GitHub'
+  'open[ -]?safely(?!.org)': 'OpenSAFELY'
