Ignore Google Docs URL

--- a/.lycheeignore
+++ b/.lycheeignore
@@ -1,5 +1,9 @@
 # Preconnect URL for fonts: 404 when the domain itself is accessed.
 https://fonts.gstatic.com
+
+# Not accessible without being logged into a Google account with access.
+https?://docs\.google\.com/document/d/1tQveWA7NWaHSx0ETR9FcXYxbtNa1NHiqwygVl6XanKw(?:/.*)?$
+
 # Not accessible without being logged in.
 https?://github\.com/opensafely/covid-vaccine-effectiveness-research(?:/.*)?$
 https?://github\.com/opensafely/rapid-reports(?:/.*)?$
