Add a section on updating codelists and warnings on jobserver

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
           - Introduction to codelists: codelist-intro.md
           - Building a codelist: codelist-creation.md
           - Adding codelists to a project: codelist-project.md
+          - Keeping codelists up to date: codelist-updating.md
       - Actions:
           - Overview: actions-intro.md
           - The project pipeline: actions-pipelines.md
