Add lite-yt-embed CSS and JS

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,10 +104,12 @@ edit_uri: "edit/main/docs/"
 extra_css:
   - css/youtube.css
   - css/extra.css
+  - css/lite-yt-embed.css
   - ehrql/stylesheets/extra.css
 
 extra_javascript:
   - js/extra.js
+  - js/lite-yt-embed.js
 
 extra:
   social:
