--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,9 @@ site_name: OpenSAFELY documentation
 site_url: !ENV MKDOCS_SITE_URL
 repo_url: https://github.com/opensafely/documentation
 
+exclude_docs: |
+  /ehrql/includes/generated_docs/
+
 nav:
   - Introduction: index.md
   - About OpenSAFELY:
