--- a/.lycheeignore
+++ b/.lycheeignore
@@ -3,6 +3,7 @@ https://fonts.gstatic.com
 
 # Not accessible without being logged into a Google account with access.
 https?://docs\.google\.com/document/d/1tQveWA7NWaHSx0ETR9FcXYxbtNa1NHiqwygVl6XanKw(?:/.*)?$
+https?://docs\.google\.com/document/d/1WqABEzk6sfmjO1Fyekj55aChwaVm6qHDw5A1QgR7R84(?:/.*)?$
 
 # Not accessible without being logged in to GitHub.
 https?://github\.com/opensafely/covid-vaccine-effectiveness-research(?:/.*)?$
