--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - About OpenSAFELY:
       - Our philosophy: open-methods.md
       - Security: security-levels.md
+      - Five Safes: five-safes.md
       - Access policies: access-policies.md
       - Technical architecture: technical-architecture.md
       - Type One Opts Outs: type-one-opt-outs.md
