--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,7 +40,12 @@ nav:
           - Reusable actions: actions-reusable.md
       - Jobs site: jobs-site.md
       - Level 4 server: level-4-server.md
-      - Safe Outputs and requesting release of files from the Level 4 server: releasing-files.md
+      - Requesting release of files from the Level 4 server:
+        - Overview: releasing-files-intro.md
+        - Applying statistical disclosure controls to your research outputs: sdc.md
+        - Requesting release of research outputs: requesting-file-release.md
+        - Review of outputs requested for release: output-checking.md
+        - File release: releasing-files.md
       - Reports:
         - Overview: reports/intro.md
         - Create a draft: reports/create-a-draft.md
