--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,10 @@ nav:
         - Tutorial: getting-started/tutorial/index.md
       - How-to guides:
         - How-to guides: getting-started/how-to/index.md
+        - How to use GitHub Codespaces in your project: getting-started/how-to/use-github-codespaces-in-your-project/index.md
+        - How to use GitHub and Git: install-github-and-git.md
+        - How to use the OpenSAFELY command-line interface: opensafely-cli.md
+        - How to create a code repository for your project: getting-started/how-to/create-a-code-repository-for-your-project/index.md
       - Explanation:
         - Explanation: getting-started/explanation/index.md
   - Using OpenSAFELY:
