--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,9 @@ nav:
         - How to create a code repository for your project: getting-started/how-to/create-a-code-repository-for-your-project/index.md
       - Explanation:
         - Explanation: getting-started/explanation/index.md
+        - Options for running OpenSAFELY: getting-started/explanation/options-for-running-opensafely/index.md
+        - Understanding GitHub Codespaces: getting-started/explanation/understanding-github-codespaces/index.md
+        - Understanding the software used to run OpenSAFELY: getting-started/explanation/understanding-the-software-used-to-run-opensafely/index.md
   - Using OpenSAFELY:
       - Analysis workflow: workflow.md
       - Federated analytics: federation.md
