--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
         - See the next steps: getting-started/tutorial/see-the-next-steps/index.md
       - How-to guides:
         - How-to guides: getting-started/how-to/index.md
+        - How to add GitHub Codespaces to your project: getting-started/how-to/add-github-codespaces-to-your-project/index.md
         - How to use GitHub Codespaces in your project: getting-started/how-to/use-github-codespaces-in-your-project/index.md
         - How to use GitHub and Git: install-github-and-git.md
         - How to use the OpenSAFELY command-line interface: opensafely-cli.md
