--- a/.lycheeignore
+++ b/.lycheeignore
@@ -22,6 +22,9 @@ https?://doi\.org(?:/.*)?$
 # This exclusion should be reviewed in future to see if the issue persists.
 https?://twitter\.com(?:/.*$)?$
 
+# An example OpenSAFELY project that is not intended to exist.
+https?://github\.com/opensafely/example-research-repository(?:/.*)?$
+
 # The following ignore line ignores this link in the source: ../data-sources
 #
 # MkDocs actually uses an index.md file to generate this,
