--- a/.lycheeignore
+++ b/.lycheeignore
@@ -3,8 +3,10 @@ https://fonts.gstatic.com
 
 # Not accessible without being logged into a Google account with access.
 https?://docs\.google\.com/document/d/1tQveWA7NWaHSx0ETR9FcXYxbtNa1NHiqwygVl6XanKw(?:/.*)?$
+https?://docs\.google\.com/document/d/1uWRiFps6tDA2SpxSxf0C2G9mOVWMQ6TQ(?:/.*)?$
 
 # Not accessible without being logged in to GitHub.
+https?://github\.com/ebmdatalab/opensafely-output-review(?:/.*)?$
 https?://github\.com/opensafely/covid-vaccine-effectiveness-research(?:/.*)?$
 https?://github\.com/opensafely/rapid-reports(?:/.*)?$
 https?://github\.com/opensafely/server-instructions(?:/.*)?$
