--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
         - How to update GitHub Codespaces in your project: getting-started/how-to/update-github-codespaces-in-your-project/index.md
         - How to use GitHub Codespaces in your project: getting-started/how-to/use-github-codespaces-in-your-project/index.md
         - How to use released outputs in GitHub Codespaces: getting-started/how-to/use-released-outputs-in-github-codespaces/index.md
+        - How to troubleshoot common issues in GitHub Codespaces: getting-started/how-to/troubleshoot-common-codespaces-issues/index.md
         - How to use Git effectively: getting-started/how-to/use-git-effectively/index.md
         - How to use the OpenSAFELY command-line interface: opensafely-cli.md
         - How to create a code repository for your project: getting-started/how-to/create-a-code-repository-for-your-project/index.md
