--- a/requirements.dev.in
+++ b/requirements.dev.in
@@ -4,5 +4,7 @@
 # To generate a requirements file that includes both prod and dev requirements, run:
 # pip-compile --generate-hashes --output-file=requirements.dev.txt requirements.dev.in
 
+black
 pip-tools
 pre-commit
+ruff
