Add `ruff` configuration to `pyproject.toml`
Taken from the [repo-template](https://github.com/opensafely-core/repo-template/blob/59dd0367c67cc62a4a53a35b9fadc4e3dc275c9d/pyproject.toml)
with adjustments because `ruff` warns about various settings being moved
to `tool.ruff.lint`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,31 @@
-[tool.isort]
-profile = "black"
-lines_after_imports = 2
-skip_glob = [".direnv", "venv", ".venv"]
+[tool.ruff]
+line-length = 88
+exclude = [
+  ".direnv",
+  ".git",
+  ".github",
+  ".ipynb_checkpoints",
+  ".pytest_cache",
+  ".venv",
+  "__pycache__",
+  "docker",
+  "htmlcov",
+  "venv",
+]
+
+[tool.ruff.lint]
+extend-select = [
+  "A",  # flake8-builtins
+  "I",  # isort
+  "INP",  # flake8-no-pep420
+  "ISC",  # flake8-implicit-str-concat
+  "UP",  # pyupgrade
+  "W",  # pycodestyle warning
+]
+extend-ignore = [
+  "E501",
+  "E731",
+]
+
+[tool.ruff.lint.isort]
+lines-after-imports = 2
