Update `.pre-commit-config` to use `justfile`
Based on ehrQL's [`.pre-commit-config`](https://github.com/opensafely-core/ehrql/blob/6a6e0140ed85166028c4316e51820d02199c0483/.pre-commit-config.yaml).

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,24 +2,15 @@ default_language_version:
   python: python3.11
 
 repos:
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
+  - repo: local
     hooks:
-    - id: black
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
-    hooks:
-    - id: flake8
-      additional_dependencies:
-      - "flake8-builtins"
-      - "flake8-implicit-str-concat"
-      - "flake8-no-pep420"
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-    - id: isort
+    - id: check
+      name: check
+      entry: just check
+      language: system
+      types: [python]
+      require_serial: true
+      pass_filenames: false
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
