Rename 'releasing research outputs' to 'viewing and releasing outputs'
Renames the releasing folder to outputs
Renames the nav section from 'releasing research outputs' to 'viewing and releasing outputs'
Adds an index page for the sections
Adds a placeholder page for the 'viewing with airlock' section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,13 +62,15 @@ nav:
           - Reusable actions: actions-reusable.md
       - Jobs site: jobs-site.md
       - Level 4 server: level-4-server.md
-      - Releasing research outputs:
-        - 'Overview: Releasing research outputs from the Level 4 server': releasing/index.md
-        - Applying statistical disclosure control: releasing/sdc.md
-        - Requesting release of research outputs: releasing/requesting-file-release.md
-        - Review process for release requests: releasing/output-checking.md
-        - Viewing released outputs: releasing/viewing-released-files.md
-        - Releasing with Airlock: '!import https://github.com/opensafely-core/airlock?branch=main'
+      - Viewing and releasing outputs:
+        - Viewing and releasing outputs: outputs/index.md
+        - Viewing outputs with Airlock: outputs/viewing-with-airlock.md
+        - Releasing research outputs from the Level 4 server: outputs/releasing-overview.md
+        - Applying statistical disclosure control: outputs/sdc.md
+        - Requesting release of research outputs: outputs/requesting-file-release.md
+        - Review process for release requests: outputs/output-checking.md
+        - Viewing released outputs: outputs/viewing-released-files.md
+        - Viewing and Releasing with Airlock: '!import https://github.com/opensafely-core/airlock?branch=main'
       - Reports:
         - Overview: reports/intro.md
         - Create a draft: reports/create-a-draft.md
@@ -193,11 +195,11 @@ markdown_extensions:
         - .  # dir containing this config file
         - imported_docs/ehrql # docs folder for the imported repo
         # docs folder for the imported airlock repo
-        - imported_docs/using-opensafely/releasing-research-outputs/releasing-with-airlock 
+        - imported_docs/using-opensafely/viewing-and-releasing-outputs/viewing-and-releasing-with-airlock
       auto_append:
         - includes/glossary.md
-        - imported_docs/using-opensafely/releasing-research-outputs/releasing-with-airlock/airlock-includes/glossary.md
-        
+        - imported_docs/using-opensafely/viewing-and-releasing-outputs/viewing-and-releasing-with-airlock/airlock-includes/glossary.md
+
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
