Add digital.nhs.uk links to .lycheeignore
These have started consistently failing with 403 errors in the links
checks. All are accessible in a browser.

--- a/.lycheeignore
+++ b/.lycheeignore
@@ -19,6 +19,7 @@ https?://www\.encepp\.eu(?:/.*)?$
 https?://www\.tandfonline\.com(?:/.*)?$
 https?://www\.icnarc\.org(?:/.*)?$
 https?://doi\.org(?:/.*)?$
+https?://digital.nhs.uk(?:/.*$)?$
 
 # Twitter used to work but is being very flaky.
 # This exclusion should be reviewed in future to see if the issue persists.
