--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -44,15 +44,4 @@ jobs:
         with:
           args: "--exclude-all-private --include-verbatim --max-concurrency 24 --require-https --verbose --no-progress --timeout 60 './docs/**/*.md' './docs/**/*.html' './imported_docs/**/*.md' './imported_docs/**/*.html' --exclude-path './docs/ehrql/includes/generated_docs'"
           fail: true
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
-      - name: "Notify Slack on Failure"
-        if: ${{ failure() && github.event_name == 'schedule' }}
-        uses: zuplo/github-action-slack-notify-build@cf8e7e66a21d76a8125ea9648979c30920195552 # v2
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        with:
-          channel_id: C0270Q313H7
-          status: "Check Docs Links Failure"
-          color: danger
+          token: ${{secrets.GITHUB_TOKEN}}
