--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -42,5 +42,7 @@ jobs:
       - name: Check links
         uses: lycheeverse/lychee-action@7cd0af4c74a61395d455af97419279d86aafaede  # v2.0.2
         with:
-          args: "--exclude-all-private --include-verbatim --max-concurrency 24 --require-https --verbose --no-progress --timeout 60 './docs/**/*.md' './docs/**/*.html' './imported_docs/**/*.md' './imported_docs/**/*.html' --exclude-path './docs/ehrql/includes/generated_docs'"
+          args: "--exclude-all-private --include-verbatim --max-concurrency 24 --require-https --verbose --no-progress
+          --accept '100..=103,200..=299,429,500..=511'
+          --timeout 60 './docs/**/*.md' './docs/**/*.html' './imported_docs/**/*.md' './imported_docs/**/*.html' --exclude-path './docs/ehrql/includes/generated_docs'"
           token: ${{secrets.GITHUB_TOKEN}}
