--- a/.lycheeignore
+++ b/.lycheeignore
@@ -20,6 +20,7 @@ https?://www\.tandfonline\.com(?:/.*)?$
 https?://www\.icnarc\.org(?:/.*)?$
 https?://doi\.org(?:/.*)?$
 https?://digital.nhs.uk(?:/.*$)?$
+https?://journalprivacyconfidentiality\.org(?:/.*$)?$
 
 # Twitter used to work but is being very flaky.
 # This exclusion should be reviewed in future to see if the issue persists.
