--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,8 @@ nav:
       - "Safe data access: The Five Safes": five-safes.md
       - Access policies: access-policies.md
       - Technical architecture: technical-architecture.md
-      - Type One Opt Outs: type-one-opt-outs.md
+      - Type One Opt-Outs: type-one-opt-outs.md
+      - National Data Opt-Outs: national-data-opt-outs.md
       - Contributing: contributing.md
   - Getting started:
       - Getting started: getting-started/index.md
